# Uni_FS-AI.2019

./: .gitmodules  CMakeLists.txt  README.md  betterThreading.py  capturing.py  cmds.py  colourDetection.py  imProc.py  maskProc.py  maskProcessing.py  oldREADME.md  zedMain.py
src/: acceleration.py  autocross.py  capturing.py  cmds.py  colour.py  demonstration.py  deprecatedFig8.py  expose_threading.cpp  figureof8.py  globals.py  gps.py  gpsData.txt  imProc.py  inspection.py  manualCommands.py  maskProc.py  newFig8.py  plotter.py  rosCapturing.py  staticInspection.py  threading.cpp  zedMain.py  zedkill.sh
src/deprecatedScripts/: demonstration.py  deprecatedFig8.py  figureof8.py  manualCommands.py  plotter.py
test/: pastMission.txt
